--- a/projmanagement/package.json
+++ b/projmanagement/package.json
@@ -13,5 +13,8 @@
     "API"
   ],
   "author": "krishna",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "3.8.1"
+  }
 }
