--- a/projmanagement/package.json
+++ b/projmanagement/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [
     "backend",
@@ -18,5 +18,10 @@
   "devDependencies": {
     "nodemon": "^3.1.11",
     "prettier": "3.8.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
   }
 }
